memos/overlays/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: memos
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Memos
    gethomepage.dev/description: Lightweight Note Taker
    gethomepage.dev/icon: "sh-memos"

spec:
  rules:
  - host: memos
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: memos
              port:
                name: http
